tests/fixtures/flow/mermaid/negative/init_directive.mmd
%%{init: {'theme': 'dark'}}%%
flowchart TD
A --> B
